parser update: normal order of selectors